[package]
name = "rand_sht"
version = "0.1.0"
edition = "2021"

[dependencies]
id3 = "1.16.2"
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }